[delivery service] added package and trackingEvent services
