# delivery-service/src/main/java/com/mihenze/mscurse/deliveryservice/rest/shipment/ShipmentResponse.java
@@ -4,6 +4,8 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.mihenze.mscurse.deliveryservice.entity.DeliveryMethod;
 import com.mihenze.mscurse.deliveryservice.entity.ShipmentStatus;
+import com.mihenze.mscurse.deliveryservice.rest.packages.PackageResponse;
+import com.mihenze.mscurse.deliveryservice.rest.trackingevent.TrackingEventResponse;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.*;
 import lombok.experimental.FieldDefaults;
