# delivery-service/src/main/java/com/mihenze/mscurse/deliveryservice/rest/trackingevent/CreateTrackingEventRequest.java
@@ -1,4 +1,4 @@
-package com.mihenze.mscurse.deliveryservice.rest.shipment;
+package com.mihenze.mscurse.deliveryservice.rest.trackingevent;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonTypeName;
@@ -7,20 +7,14 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.*;
 import lombok.experimental.FieldDefaults;
 
-import java.time.Instant;
-
 @Getter
 @Setter
 @NoArgsConstructor
 @AllArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE)
-@JsonTypeName("TrackingEventResponse")
-@Schema(description = "Текущее отслеживание")
-public class TrackingEventResponse {
-    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
-    @Schema(description = "Уникальный идентификатор отслеживания", requiredMode = Schema.RequiredMode.REQUIRED)
-    Long id;
-
+@JsonTypeName("CreateTrackingEventRequest")
+@Schema(description = "Создать новое отслеживание")
+public class CreateTrackingEventRequest {
     @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
     @Schema(description = "Описание отслеживания", requiredMode = Schema.RequiredMode.REQUIRED)
     String description;
@@ -33,9 +27,4 @@ public class TrackingEventResponse {
     @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
     @Schema(description = "Текущий город", requiredMode = Schema.RequiredMode.REQUIRED)
     String city;
-
-    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
-    @Schema(description = "Время изменения", example = "2025-09-25T01:11:36Z",
-            requiredMode = Schema.RequiredMode.REQUIRED)
-    Instant eventTime;
 }
